fix: hide alt text overflow (#481)

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,11 @@ body {
     padding: 0 1rem;
 }
 
+picture, img {
+    overflow-wrap: break-word;
+    overflow: hidden;
+}
+
 td {
     white-space: nowrap;
 }
